add new dependencies